# api.yml
@@ -4,18 +4,55 @@ info:
   version: 0.0.1
   description: API description
 paths:
+  /200:
+    get:
+      responses:
+        "200":
+          description: ok
+          content:
+            text/html:
+              schema:
+                type: string
+  /200/json:
+    get:
+      responses:
+        "200":
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+  /500:
+    get:
+      responses:
+        "500":
+          description: server error
+          content:
+            application/json:
+              schema:
+                type: object
+
+  /500/json:
+    get:
+      responses:
+        "500":
+          description: server error
+          content:
+            text/html:
+              schema:
+                type: string
   /routes:
     post:
       operationId: createRoute
       responses:
-        '201':
-          description: 'Ok, route created'
+        "201":
+          description: "Ok, route created"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Route'
+                $ref: "#/components/schemas/Route"
       requestBody:
-        $ref: '#/components/requestBodies/Route'
+        $ref: "#/components/requestBodies/Route"
     get:
       operationId: getAllRoutes
       parameters:
@@ -36,14 +73,14 @@ paths:
             format: int32
             default: 1000
         - in: query
-          description: 'the field to be sorted (e.g.: lastModifiedDate,desc)'
+          description: "the field to be sorted (e.g.: lastModifiedDate,desc)"
           name: sort
           required: false
           schema:
             type: string
-            default: 'lastModifiedDate,desc'
+            default: "lastModifiedDate,desc"
       responses:
-        '200':
+        "200":
           description: Ok, list of routes
           headers:
             X-Total-Count:
@@ -63,28 +100,28 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Routes'
-  '/routes/middleware':
+                $ref: "#/components/schemas/Routes"
+  "/routes/middleware":
     get:
       operationId: getRouteMiddleware
       responses:
-        '200':
+        "200":
           description: description
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Route'
-  '/routes/proxy':
+                $ref: "#/components/schemas/Route"
+  "/routes/proxy":
     get:
       operationId: getRouteProxy
       responses:
-        '200':
+        "200":
           description: description
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Route'
-  '/routes/{routeId}':
+                $ref: "#/components/schemas/Route"
+  "/routes/{routeId}":
     put:
       summary: Updates a route
       operationId: updateRoute
@@ -96,14 +133,14 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
-          description: 'Ok, route updated'
+        "200":
+          description: "Ok, route updated"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Route'
+                $ref: "#/components/schemas/Route"
       requestBody:
-        $ref: '#/components/requestBodies/Route'
+        $ref: "#/components/requestBodies/Route"
     get:
       operationId: getRouteDetails
       parameters:
@@ -114,12 +151,12 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        "200":
           description: description
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Route'
+                $ref: "#/components/schemas/Route"
     delete:
       summary: Deletes a route
       operationId: deleteRoute
@@ -131,9 +168,9 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
-          description: 'Ok, route deleted'
-  '/routes/{routeId}/sub/action':
+        "200":
+          description: "Ok, route deleted"
+  "/routes/{routeId}/sub/action":
     get:
       operationId: routeSubAction
       parameters:
@@ -144,21 +181,21 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        "200":
           description: description
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Route'
+                $ref: "#/components/schemas/Route"
 servers:
-  - url: 'http://localhost:3000/api'
+  - url: "http://localhost:3000/api"
 components:
   requestBodies:
     Route:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Route'
+            $ref: "#/components/schemas/Route"
   securitySchemes:
     Bearer:
       type: apiKey
@@ -168,7 +205,7 @@ components:
     Routes:
       type: array
       items:
-        $ref: '#/components/schemas/Route'
+        $ref: "#/components/schemas/Route"
     Route:
       type: object
       properties:
@@ -182,15 +219,15 @@ components:
           type: "string"
           format: "date-time"
       additionalProperties:
-        $ref: '#/components/schemas/Options'
+        $ref: "#/components/schemas/Options"
     Options:
       type: array
       items:
-        $ref: '#/components/schemas/Option'
+        $ref: "#/components/schemas/Option"
     Option:
       type: object
       allOf:
-        - $ref: '#/components/schemas/BaseOption'
+        - $ref: "#/components/schemas/BaseOption"
         - type: object
           properties:
             description:
